fix(Button): align for size=l

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -564,10 +564,6 @@
   margin-left: 8px;
 }
 
-.Button--sz-l .Button__in {
-  justify-content: center;
-}
-
 /**
  * sizeY COMPACT
  */
